@@ -23,6 +23,10 @@
 	doesn't automatically insert a page break with each
 	HTML file or URL (--continuous).
 	<LI>Now draw border around inline images as needed.
+	<LI>Now support MacOS X (only command-line at present).
+	<LI>Now support the "page-break-before", "text-align",
+	"vertical-align" style attributes, but only for style
+	information in an element's STYLE attribute.
 
 	<H3>Changes</H3>
 
